--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name" : "cours-node",
   "version" : "0.1.0",
   "dependencies" : {
-    "express" : "*",
+    "express" : "latest",
     "ejs" : "~2.5.2",
     "socket.io" : "~1.4.8",
     "express-session": "latest",
